# ACMap

./: .dockerignore  .env.example  .gitignore  .prettierignore  LICENSE  README.md  docker.sh  pyproject.toml
cmd/: download.py  inference.sh  nohup.sh  train.sh
docker/: Dockerfile.cu111  Dockerfile.cu117
exps/: cifar.yaml  cub.yaml  imagenet-a.yaml  imagenet-r.yaml  vtab.yaml
src/acmap/: inference.py  train.py
src/acmap/backbone/: linears.py  vit_acmap.py
src/acmap/models/: acmap.py
src/acmap/utils/: config.py  context.py  data.py  data_manager.py  factory.py  inc_net.py  logger.py  merge.py  options.py  toolkit.py
